--- a/02-backend/01-golang/01-go/08-Go常量.md
+++ b/02-backend/01-golang/01-go/08-Go常量.md
@@ -86,7 +86,7 @@ const (
 ### 规律总结
 
 * 第一行必须赋值
-* `iota`遇到`const`自动清零，每一行，`iota`自增1
+* `iota`遇到`const`自动清零，每一行，`iota`自增1，即`iota`代表的是行数
 * 如果某一行不赋值，则它数量和值与上一行必须相同（可能等于`iota`）
 
 ```go
