--- a/02-backend/01-golang/01-go/09-Go运算符.md
+++ b/02-backend/01-golang/01-go/09-Go运算符.md
@@ -67,7 +67,7 @@
 
 #### 展开切片
 
-`...`跟在切片变量的后面，表示`展开`的意思
+`...`跟在切片变量的后面，表示`展开`的意思（与JS不同）
 
 ```go
 var s []int = []int{1,2,3,4,5}
@@ -79,7 +79,7 @@ fmt.Println(s) // [1,2,3,4,5,6,7,8,9,10]
 
 #### 接收可变长度参数
 
-`...`跟在类似的前面，表示`可变长度参数`的意思
+`...`跟在类似的前面，表示`可变长度参数`的意思（与JS相同）
 
 ```go
 func sum(arr ...int) int {
