--- a/02-backend/01-golang/01-go/10-Go分支.md
+++ b/02-backend/01-golang/01-go/10-Go分支.md
@@ -87,12 +87,24 @@ switch 表达式 {
 
 ## goto
 
+### 概述
+
+Go 语言的 goto 语句可以无条件地转移到过程中的指定的行
+
+goto 语句常常配合条件语句使用，实现条件转移，跳出循环体，集中处理错误等功能
+
+### 使用方法
+
 定义 `label` 后，可以使用 `goto` 跳转到该 `label`
 
 ```go
 label: 语句
 goto label
 ```
+
+### 注意事项
+
+不主张使用 goto 语句，以免造成程序流程的混乱
 
 
 
