--- a/02-backend/01-golang/01-go/13-Go切片.md
+++ b/02-backend/01-golang/01-go/13-Go切片.md
@@ -10,6 +10,8 @@
 
 ## 切片内存布局
 
+### 概述
+
 切片是引用类型，切片名变量存储的是一个结构体的地址，即切片名是结构体的指针
 
 结构体包含三个值：封装数组的地址 + 切片的大小 + 切片的容量
@@ -23,6 +25,8 @@ type slice struct {
 ```
 
 正因为切片是一个包含三个值的结构体，所以不能进行比较，即不能使用比较运算符，切片唯一合法的比较对象是`nil`
+
+slice本身是一个指针，不存值
 
 ### 切片大小：len
 
@@ -155,6 +159,10 @@ for i, v := range slice {
 }
 ```
 
+### 判断元素是否存在于切片中
+
+手动写for-range判断
+
 
 
 ## 切片追加元素
@@ -198,11 +206,22 @@ fmt.Println(s) // [1,2,3,4,5,6,7,8,9,10]
 
 让新切片的长度和容量一样，这样进行追加操作时就会生成新的底层数组，和原有数组分离，就不会因为共用底层数组而引起奇怪问题，因为共用数组的时候修改内容，会影响多个切片
 
+### make遇到append容易遇到的坑
+
+```go
+s1 := make([]int, 5)
+s1 = append(s1, 6)
+// 对于很多初学者来说，期望的是只有一个数字，就是6，但实际上
+fmt.Println(s1) // [0,0,0,0,0,1] // 因为Go会对数组的元素使用默认值进行初始化
+
+// 很多人对make函数产生了一个假象，s1 := make([]int, 5)，好比是 Python 中的 s1 = []，实际行并不是
+```
+
 
 
 ## 切片拷贝操作
 
-与`append`不同，不会共用底层数组，而是会新建数组
+`copy`与`append`不同，不会共用底层数组，而是会新建数组
 
 ```go
 copy(para1, para2) // para1 和 para2 都是切片类型，将para2的内容复制到para1
