--- a/02-backend/01-golang/01-go/14-Go映射.md
+++ b/02-backend/01-golang/01-go/14-Go映射.md
@@ -35,10 +35,9 @@ var 变量名 map[string]int = map[string]int{
 ### key 
 
 * 必须支持 `==` 运算
-
 * 一般用 `string` 和 数值 ，还可以用 `bool`，`指针`，`channel`
-
 * 不能用 `slice`，`map`和 `function`
+* 映射的key支持数组（因为数组支持 == 操作）
 
 ### value
 
