--- a/02-backend/01-golang/01-go/15-Go函数.md
+++ b/02-backend/01-golang/01-go/15-Go函数.md
@@ -175,6 +175,7 @@ var (
 | panic    | 引出异常                                                     |
 | recover  | 用在defer语句中，用于获取panic中的信息，从而进行异常处理，使程序恢复正常状态 |
 | close    | 主要用于关闭channel                                          |
+| println  | 打印函数，不是必须使用 fmt 包                                |
 
 ### new函数
 
