--- a/02-backend/01-golang/01-go/16-Go结构体.md
+++ b/02-backend/01-golang/01-go/16-Go结构体.md
@@ -1,5 +1,7 @@
 ## 定义结构体
 
+### 概述
+
 使用自定义类型来定义结构体
 
 ### 写法
@@ -16,7 +18,7 @@ type 结构体名称 struct {
 
 如果结构体的字段想要在别的包中也可以访问，则需要该字段是导出的，即以大写字母开头
 
-### 例子
+### 示例代码
 
 ```go
 type Cat struct {
@@ -31,6 +33,8 @@ type Cat struct {
 
 
 ## 结构体实例化
+
+### 概述
 
 结构体是值类型，如果没有进行赋值，则字段的值为类型零值
 
@@ -129,6 +133,8 @@ person := Person{"golang",20}
 
 ## 结构体嵌套/组合
 
+### 概述
+
 结构体是一种数据类型，它本身可以作为其他结构体的字段的类型
 
 这种写法称为**结构体的嵌套**或**结构体的组合**，组合能实现类似继承的效果
@@ -163,7 +169,7 @@ func main() {
 }
 ```
 
-### 匿名嵌套
+### 匿名嵌套【自动命名】
 
 结构体类型的字段不起名字，编译器会给该字段自动命名为结构体类型的名称
 
@@ -176,7 +182,7 @@ type Address struct {
 type Person struct {
   Name string
   Age int
-  Address // 相当于 address address
+  Address // 相当于 Address Address
 }
 
 func main() {
@@ -341,15 +347,21 @@ func main() {
   fmt.Println(u.info) // error: 因为 info 是未导出的
   fmt.Println(u.Name) // ok: 因为 Name 类型提升了
   fmt.Println(u.Age)  // ok: 因为 Age 类型提升了
-  fmt.Println(u.addr) // error: 因为 addr 虽然类型提升了，但未导出
+  fmt.Println(u.addr) // error: addr 虽然类型提升了，但未导出
 }
 ```
+
+### 总结
+
+自动命名、类型提升
 
 
 
 ## 结构体与tag
 
-在定义结构体时，可以给每个字段加上一个`tag`
+### 概述
+
+在定义结构体时，可以给每个字段加上一个`tag`，从而让字段可以附带更多的信息
 
 结构体的`tag`可以通过反射机制获取，常见用于序列化和反序列化
 
@@ -360,15 +372,28 @@ type Student struct {
 }
 ```
 
+### 示例代码
+
+```go
+type Info struct {
+	Name string
+    AgeDetail int `json:"age,omitempty"`
+}
+```
+
 
 
 ## 工厂模式
+
+### 概述
 
 结构体没有构造函数，通过工厂模式来解决
 
 `Go`中的工厂函数约定使用`New/new`开头
 
 结构体工厂函数中的返回值类型推荐使用指针类型，因为结构体是值类型，如果返回值的类型不是指针类型，则需要进行拷贝，比较占用系统资源
+
+### 示例代码
 
 ```go
 type student struct {
@@ -386,10 +411,26 @@ func New(name string, age int) *student {
 
 
 
+## 结构体大小
+
+结构体是值类型，可以使用sizeof查看类型
+
+```go
+fmt.Println(unsafe.Sizeof(stu))
+
+fmt.Println(unsafe.Sizeof("aaa")) // 8
+fmt.Println(unsafe.Sizeof([]int{})) // 24
+fmt.Println(unsafe.Sizeof(map[string]string{}))
+```
+
+
+
+
+
 ## 结构体注意事项
 
 * 结构体的所有字段在内存中是连续的**（注意可能存在内存对齐）**
-
 * 结构体没有构造函数，但可以通过工厂模式创建实例
-
 * 结构体是用户单独定义的类型，和其他类型进行转换时，需要具有完全相同的字段（名字以及数量，以及类型）且进行显式转换
+* 结构体基本达到类的效果（封装+继承），但还不能达到多态（实际通过接口实现）
+
