--- a/01-frontend/01-basic/03-javascript/34-错误与异常处理.md
+++ b/01-frontend/01-basic/03-javascript/34-错误与异常处理.md
@@ -97,6 +97,31 @@ try {
 
 
 
+## finally解析
+
+### finally原理
+
+在return前，系统会自动创建一个临时变量，缓存返回值，finally是在缓存返回值和return之间调用的
+
+```js
+console.log("before return");
+return data;
+
+// 实际执行流程如下 //
+
+console.log("before return");
+
+const tempVal = data;
+// 此处执行 finally 中的逻辑
+return tempVal;
+```
+
+### finally中return
+
+finally中是可以return的，而且这个地方一旦有了return，就会覆盖原本的return
+
+
+
 ## ES10增强
 
 catch 的参数改为可选
