--- a/02-backend/01-golang/01-go/13-Go切片.md
+++ b/02-backend/01-golang/01-go/13-Go切片.md
@@ -1,16 +1,16 @@
-## 什么是切片
+## 初识切片
+
+### 切片定义
 
 切片是一个拥有相同数据类型的可变长度的序列，它是基于数组的一层封装
 
 切片是引用类型，指向一个结构体，结构体包括一个数组的指针，切片大小，切片容量
 
+切片是引用传递，而不是值传递
+
 因为切片底层是动态数组，所以切片的操作和数组很类似
 
-
-
-## 切片内存布局
-
-### 概述
+### 切片内存布局
 
 切片是引用类型，切片名变量存储的是一个结构体的地址，即切片名是结构体的指针
 
@@ -18,7 +18,7 @@
 
 ```go
 type slice struct {
-  ptr *[2]int
+  ptr *Elem
   length int
   capacity int
 }
@@ -28,48 +28,30 @@ type slice struct {
 
 slice本身是一个指针，不存值
 
-### 切片大小：len
-
-切片的元素数量
-
-```go
-var s []int = make([]int, 10, 30)
-fmt.Println(len(s)) // 10
-```
-
-### 切片容量：cap
-
-切片的底层数组的容量
-
-```go
-var s []int = make([]int, 10, 30)
-fmt.Println(cap(s)) // 30
-```
 
 
+## 切片操作
 
-## 定义切片
+### 定义切片
 
 ```go
 var 切片名 []类型
 var sli []int
 ```
 
-
-
-## 切片初始化
+### 切片初始化
 
 如果没有给切片赋值，则是类型的默认值
 
-如果切片没有初始化，也是可以使用的，这与 `map` 必须初始化后才能使用不同
+如果切片**没有初始化，也是可以使用的**，这与 `map` 必须初始化后才能使用不同
 
-### 方法1：直接初始化
+#### 方法1：直接初始化
 
 ```go
 var s []int = []int{1,3,5}
 ```
 
-### 方法2：通过make来创建切片
+#### 方法2：通过make来创建切片
 
 `make(切片类型, 切片元素数量, 切片容量)`
 
@@ -82,7 +64,7 @@ var s []int = make([]int, 4) // 如果只指定了 length，则capacity == lengt
 var s []int = make([]int, 4, 10) // []type, length, capacity 
 ```
 
-### 方法3：基于已有数组进行创建
+#### 方法3：基于已有数组进行创建
 
 ```go
 // arr[start:end] 左闭后开，即 [start, end)
@@ -94,7 +76,7 @@ s := intArr[1:3] // [1,3)
 // arr[:] 写法等价于 arr[0:len(str)] 
 ```
 
-#### 注意：此时切片的底层数组用的是同一个数组
+注意：此时切片的底层数组用的是同一个数组
 
 ```go
 var s [10]int = [10]int{}
@@ -112,7 +94,7 @@ fmt.Println(ss) // [0 666 0 0 0 0 777]
 
 解决方法：使用`copy`函数
 
-### 方法4：基于已有切片进行创建
+#### 方法4：基于已有切片进行创建
 
 ```go
 slice := []int{1, 2, 3, 4, 5}
@@ -121,7 +103,7 @@ slice2 := slice[0:]
 slice3 := slice[:5]
 ```
 
-#### 注意：此时切片的底层数组用的是同一个数组
+注意：此时切片的底层数组用的是同一个数组
 
 ```go
 var s []int = make([]int, 10)
@@ -139,11 +121,33 @@ fmt.Println(ss) // [0 666 0 0 0 0 777]
 
 解决方法：使用`copy`函数
 
+#### 方法5：通过 new 创建
 
+这个方法没啥实际的意义，只是一种语法上可行的创建方法
 
-## 切片遍历
+```go
+s := *new([]int)
+```
 
-### 方法1
+### 获取切片大小与容量
+
+使用内置函数 `len` 获取切片的元素数量
+
+```go
+var s []int = make([]int, 10, 30)
+fmt.Println(len(s)) // 10
+```
+
+使用内置函数 `cap` 获取切片的底层数组的容量
+
+```go
+var s []int = make([]int, 10, 30)
+fmt.Println(cap(s)) // 30
+```
+
+### 切片遍历
+
+方法1：普通 for 循环
 
 ```go
 for i := 0; i < len(slice); i++ {
@@ -151,7 +155,7 @@ for i := 0; i < len(slice); i++ {
 }
 ```
 
-### 方法2
+方法2：for range遍历
 
 ```go
 for i, v := range slice {
@@ -159,15 +163,41 @@ for i, v := range slice {
 }
 ```
 
-### 判断元素是否存在于切片中
+### 判断切片是否含有元素
 
-手动写for-range判断
+Go 没有提供相应的 API，需要手动遍历切片获取
+
+### 切片拷贝操作
+
+`copy`与`append`不同，不会共用底层数组，而是会新建数组
+
+```go
+copy(para1, para2) // para1 和 para2 都是切片类型，将para2的内容复制到para1
+```
+
+### 切片删除元素
+
+使用切片、append函数和`...`运算符来实现切片删除元素的操作
+
+```go
+func main() {
+  var s []int = []int{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10}
+
+  s = deleteElement(s, 10)
+
+  fmt.Println(s) // [0,1,2,3,4,6,7,8,9,10]
+}
+
+func deleteElement(slice []int, index int) []int {
+  return append(slice[:index], slice[index+1:]...)
+}
+```
 
 
 
 ## 切片追加元素
 
-### `append`函数原理
+### append函数原理
 
 append函数接收两个参数，第一个是要进行添加的切片，第二个是要添加的不定长元素
 
@@ -204,7 +234,7 @@ fmt.Println(s) // [1,2,3,4,5,6,7,8,9,10]
 
 ### 设置切片长度和容量一样的好处
 
-让新切片的长度和容量一样，这样进行追加操作时就会生成新的底层数组，和原有数组分离，就不会因为共用底层数组而引起奇怪问题，因为共用数组的时候修改内容，会影响多个切片
+让新切片的长度和容量一样（length == capacity），这样进行追加操作时就会生成新的底层数组，和原有数组分离，就不会因为共用底层数组而引起奇怪问题，因为共用数组的时候修改内容，会影响多个切片
 
 ### make遇到append容易遇到的坑
 
@@ -215,36 +245,6 @@ s1 = append(s1, 6)
 fmt.Println(s1) // [0,0,0,0,0,1] // 因为Go会对数组的元素使用默认值进行初始化
 
 // 很多人对make函数产生了一个假象，s1 := make([]int, 5)，好比是 Python 中的 s1 = []，实际行并不是
-```
-
-
-
-## 切片拷贝操作
-
-`copy`与`append`不同，不会共用底层数组，而是会新建数组
-
-```go
-copy(para1, para2) // para1 和 para2 都是切片类型，将para2的内容复制到para1
-```
-
-
-
-## 切片删除元素
-
-使用切片、append函数和`...`运算符来实现切片删除元素的操作
-
-```go
-func main() {
-  var s []int = []int{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10}
-
-  s = deleteElement(s, 10)
-
-  fmt.Println(s) // [0,1,2,3,4,6,7,8,9,10]
-}
-
-func deleteElement(slice []int, index int) []int {
-  return append(slice[:index], slice[index+1:]...)
-}
 ```
 
 
