--- a/02-backend/01-golang/01-go/22-Go错误与异常.md
+++ b/02-backend/01-golang/01-go/22-Go错误与异常.md
@@ -1,14 +1,47 @@
+## 错误与异常
+
+### 概念对比
+
+错误和异常是两个不同的概念
+
+| 概念 | 说明                               | 示例                        |
+| ---- | ---------------------------------- | --------------------------- |
+| 错误 | 可以预先知道的可能会出错的【已知】 | 除数为0                     |
+| 异常 | 不可预知的问题叫做异常【未知】     | 访问了映射中一个不存在的key |
+
+```go
+strconv.Itoa() // go 认为Itoa这个函数不可能发生错误，只可能发生异常
+
+strconv.Atoi() // go 认为Atoi这个函数内部会出现一些能够预知的错误（比如输入了不正确的字符串 abcd），所以返回了error
+```
+
+### 常见的异常
+
+1. 空指针引用
+2. 下标越界
+3. 不应该出现的分支，比如default
+4. 输入错误引起的函数错误
+
+其他场景，我们使用错误处理
+
+### 错误处理和异常处理是不同的
+
+| 错误或异常 | 处理方式        |
+| ---------- | --------------- |
+| 错误处理   | err != nil      |
+| 异常处理   | panic + recover |
+
+
+
 ## 自定义错误
 
-### errors.New
-
-自定义错误，返回一个 `error` 类型的值
+通过使用 `errors.New` 自定义错误，返回一个 `error` 类型的值
 
 ```go
 error.New("错误说明")
 ```
 
-使用经验：
+使用经验
 
 * 如果失败原因只有一个，则返回 `bool` 类型
 * 如果失败原因不止一个，则返回 `error` 类型
@@ -33,13 +66,13 @@ panic("message") // 指定 panic 发生时显示的信息
 
 默认情况下，当发生错误`(panic)`后，程序就会崩溃
 
-如果希望当发生 `panic` 后，可以捕捉到 `panic`，并进行处理，使程序不崩溃，则需要进行错误处理
+如果希望当发生 `panic` 后，可以捕捉到 `panic`，并进行处理，从而使程序不崩溃，则需要进行错误处理
 
 `Go` 不支持传统的 `try-catch-finally`，而是使用 `defer-panic-recover`机制
 
 ### 流程
 
-程序错误抛出一个 `panic`，然后在 `defer` 语句中通过 `recover` 函数捕获这个 `panic`，并处理，从而避免程序崩溃
+程序错误抛出一个 `panic`，然后在 `defer` 语句中通过 `recover` 函数捕获这个 `panic`并处理，从而避免程序崩溃
 
 ### 示例
 
@@ -67,11 +100,9 @@ func test() {
 
 ### 注意
 
-`recover()`必须搭配`defer`使用
-
-`defer`一定要在可能引发`panic`的语句之前定义
-
-`recover()` 必须在函数内部使用
+1. `recover()`必须搭配`defer`使用
+2. `defer`一定要在可能引发`panic`的语句之前定义（因为`panic` 比 `default` 优先级要高）
+3. `recover()` 必须在函数内部使用
 
 ```go
 defer func() {
@@ -81,4 +112,6 @@ defer func() {
 defer recover() // 无效
 ```
 
-`panic` 比 `default` 优先级要高
+### 协程中的异常处理
+
+Go设计认为：协程中的异常要自己捕获处理
