--- a/03-be/01-go-stack/01-golang/04-数据类型.md
+++ b/03-be/01-go-stack/01-golang/04-数据类型.md
@@ -79,6 +79,13 @@ complex64的实部和虚部都是32位
 
 complex128的实部和虚部都是64位
 
+```go
+func complex() {
+    c := 3 + 4i
+    fmt.Println(cmplx.Abs(c)) // 5
+}
+```
+
 ### 布尔
 
 `bool` : `true` / `false`
