--- a/03-be/01-go-stack/01-golang/14-结构体.md
+++ b/03-be/01-go-stack/01-golang/14-结构体.md
@@ -171,7 +171,7 @@ func main() {
 
 ### 匿名嵌套【自动命名】
 
-结构体类型的字段不起名字，编译器会给该字段自动命名为结构体类型的名称
+结构体类型的字段不起名字，**编译器会给该字段自动命名为结构体类型的名称**
 
 ```go
 type Address struct {
