--- a/03-be/01-go-stack/01-golang/20-错误与异常.md
+++ b/03-be/01-go-stack/01-golang/20-错误与异常.md
@@ -4,10 +4,10 @@
 
 错误和异常是两个不同的概念
 
-| 概念 | 说明                               | 示例                        |
-| ---- | ---------------------------------- | --------------------------- |
-| 错误 | 可以预先知道的可能会出错的【已知】 | 除数为0                     |
-| 异常 | 不可预知的问题叫做异常【未知】     | 访问了映射中一个不存在的key |
+| 概念 | 说明                                         | 示例                                  |
+| ---- | -------------------------------------------- | ------------------------------------- |
+| 错误 | 可以预先知道的可能会出错的【已知，意料之中】 | 除数为0                               |
+| 异常 | 不可预知的问题叫做异常【未知，意料之外】     | 访问了映射中一个不存在的key；数组越界 |
 
 ```go
 strconv.Itoa() // go 认为Itoa这个函数不可能发生错误，只可能发生异常
@@ -46,11 +46,27 @@ error.New("错误说明")
 * 如果失败原因只有一个，则返回 `bool` 类型
 * 如果失败原因不止一个，则返回 `error` 类型
 
+错误可以进行类型断言
+
+```go
+file, err := os.Open("abc.txt")
+
+if err != nil {
+    if pathError, ok := err.(*os.PathError); ok {
+        fmt.Println(pathError.Err)
+    } else {
+        fmt.Println("unkonwn error", err)
+    }
+}
+```
+
 
 
 ## 抛出异常
 
 使用内置函数 `panic`，接收任意值作为参数，引发异常
+
+流程：一直向上返回，执行每一层的defer，如果没有遇见recover，则程序退出
 
 `panic` 可以在任何位置引发，但是 `recover` 只能在 `defer` 中调用
 
@@ -64,7 +80,7 @@ panic("message") // 指定 panic 发生时显示的信息
 
 ### 机制说明
 
-默认情况下，当发生错误`(panic)`后，程序就会崩溃
+默认情况下，当发生异常`(panic)`后，程序就会崩溃
 
 如果希望当发生 `panic` 后，可以捕捉到 `panic`，并进行处理，从而使程序不崩溃，则需要进行错误处理
 
@@ -88,10 +104,12 @@ func main() {
 
 func test() {
   defer func() {
-    err := recover() // recover内置函数，可以捕获异常
-    if err != nil {
-      fmt.Println("err=",err)
-    }
+    r := recover() // recover内置函数，可以捕获异常
+      if err, ok := r.(error); ok {
+          fmt.Println("err=", err)
+      } else {
+          panic(r)
+      }
   }()
    
   panic("引发异常")
