--- a/03-be/01-go-stack/01-golang/22-包管理.md
+++ b/03-be/01-go-stack/01-golang/22-包管理.md
@@ -8,9 +8,10 @@
 
 1. 自动下载依赖包
 2. 项目不强制要求放在`$GOPATH/src`内了
-3. 项目内会生成一个`go.mod`文件，列出包依赖
-4. 所以来的第三方包会准确的指定版本号
-5. 对于已经转移的包，可以用`replace`声明替换，不需要改`import`语句代码
+3. 用户不必关心目录结构
+4. 项目内会生成一个`go.mod`文件，列出包依赖
+5. 所以来的第三方包会准确的指定版本号
+6. 对于已经转移的包，可以用`replace`声明替换，不需要改`import`语句代码
 
 ### Go Module设置
 
@@ -149,10 +150,19 @@ replace (
 
 ### 常见问题
 
+#### 如何引用本地的包？
+
+公式如下
+
+```
+import的路径 = go.mod下的module name + 包相对于go.mod的相对目录
+```
+
 #### 如何在既有项目中使用 Go Module
 
 > 1. 在项目目录下执行`go mod init`，生成一个`go.mod`文件
 > 2. 执行`go get`，查找并记录当前项目的依赖，同时生成一个`go.sum`记录每个依赖库的版本和哈希值
+> 3. 执行`go mod tidy`，整理依赖
 
 #### 如何在新项目中使用 Go Module
 
