--- a/03-be/01-go-stack/01-golang/23-并发编程.md
+++ b/03-be/01-go-stack/01-golang/23-并发编程.md
@@ -6,13 +6,35 @@
 
 ### 特点
 
+#### 轻量级"线程"
+
+因为 `goroutine` 是 `runtime` 在用户态层面创建的线程，且它的默认占用大小为`2KB`，而`OS`的线程默认占用大小大概为`2MB`，所以不同于其他的语言，`Go` 能同时创建很多个 `goroutine`
+
 #### goroutine性能高
 
 因为`goroutine`是用户级别的线程，所以对`goroutine`的操作（创建，切换，销毁等）属于用户态的操作，不涉及用户态与内核态转换的过程，所以 `goroutine` 性能高
 
-#### 能够同时创建很多个goroutine
+#### "非"抢占式调度
 
-因为 `goroutine` 是 `runtime` 在用户态层面创建的线程，且它的默认占用大小为`2KB`，而`OS`的线程默认占用大小大概为`2MB`，所以不同于其他的语言，`Go` 能同时创建很多个 `goroutine`
+在Go1.14之前，goroutine是非抢占式调度，由协程主动交出控制权，即下列代码是死循环
+
+```go
+func main() {
+    var a [10]int
+    
+    for i := 0; i < 10; i++ {
+        go func(i int) {
+            for {
+                a[i]++ // 由于非抢占式，所以一直卡在这里
+            }
+        }(i)
+    }
+}
+```
+
+在Go1.14之后，goroutine是抢占式调度，即上面的代码不会卡住了
+
+非抢占式会带来了一个坑（就是上面的程序有可能死循环），不过在Go1.14之后这个坑被填了
 
 ### 使用
 
@@ -20,7 +42,7 @@
 
 创建一个 `goroutine` 非常简单，只要使用关键字`go` 后跟要执行的函数（任务）即可
 
-一个 `goroutine` 必定对应一个函数
+一个 `goroutine` 必定对应一个函数的调用
 
 ```go
 package main
@@ -62,6 +84,24 @@ func main() {
   time.Sleep(time.Second) // 之后会解释为什么需要睡眠
   fmt.Println("完成")
 }
+```
+
+#### 交出控制权
+
+方式1：使用IO操作
+
+```go
+go func() {
+    fmt.Println("Hello goroutine")
+}()
+```
+
+方式2：使用runtime
+
+```go
+go func() {
+    runtime.Gosched()
+}()
 ```
 
 ### 主死随从
@@ -136,6 +176,14 @@ func main() {
 #### goroutine什么时候结束？
 
 当 `goroutine` 封装的函数（任务）执行结束了，该 `goroutine` 就结束了
+
+#### goroutine可能切换的时间点？
+
+1. I/O操作、select
+2. channel
+3. 等待锁
+4. 函数调用（有时）
+5. runtime.Gosched
 
 ### GMP调度模型
 
@@ -397,6 +445,12 @@ func main() {
 
 
 
+## Cond
+
+// TODO
+
+
+
 ## channel
 
 ### 概述
@@ -559,7 +613,7 @@ close(ch)
 
 关闭后不能再往`channel`中写，但还可以继续从`channel`中读，直到读完为止
 
-当 `channel` 关闭且读空后，再继续读，**不会阻塞，也不报错**
+当 `channel` 关闭且读空后，再继续读，**不会阻塞，也不报错，读出来的是类型零值**
 
 ```go
 ch1 := make(chan int, 2)
@@ -571,6 +625,17 @@ close(ch1) // 关闭 channel
 
 fmt.Println(<-ch1) // 1
 fmt.Println(<-ch1) // 2
+```
+
+使用 ok 判断是否已经读完
+
+```go
+ch1 := make(chan int, 2)
+
+ch1 <- 1
+ch1 <- 2
+
+close(ch1) // 关闭 channel
 
 // 此时 ch1 已关闭，且读空
 x, ok := <- ch1
@@ -636,11 +701,39 @@ func main() {
 }
 ```
 
-#### 特殊用法
+#### 常规用法
 
-* 阻塞`main`：对于没有`case`的`select{}`会一直等待，可用于阻塞`main`函数，而不一定要用`sync.WaitGroup`
-* 设置超时：配合 `time.After` 使用
-* 定时任务：配合 `time.Tick` 使用
+阻塞`main`：对于没有`case`的`select{}`会一直等待，可用于阻塞`main`函数，而不一定要用`sync.WaitGroup`
+
+```go
+func main() {
+    select {}
+}
+```
+
+设置超时：配合 `time.After` 使用
+
+```go
+func main() {
+    select {
+        case <-time.After(time.Second):
+        	fmt.Println("timeout")
+    }
+}
+```
+
+定时任务：配合 `time.Tick` 使用
+
+```go
+func main() {
+    tk := time.Tick(2 * time.Second)
+    
+    select {
+        case <-tk:
+        	fmt.Println("2 second")
+    }
+}
+```
 
 ### channel状态总结
 
@@ -1034,6 +1127,127 @@ func foo02(ctx context.Context) {
 func foo03(ctx context.Context) {
 	fmt.Println(ctx.Value(foo01String("test01")))
 	fmt.Println(ctx.Value(foo02String("test02")))
+}
+```
+
+
+
+## 并发编程模式
+
+### 生成器模式
+
+```go
+func msgGen() chan string {
+    c := make(chan string)
+    
+    go func() {
+        i := 0
+        for {
+            time.Sleep(time.Duration(rand.Intn(2000)) * time.Millisecond)
+            c <- fmt.Sprintf("message %d", i)
+            i++
+        }
+    }()
+    
+    return c
+}
+```
+
+### 合并管道
+
+方式1：使用goroutine
+
+```go
+func fanIn(c1, c2 chan string) chan string {
+    c := make(chan string)
+    
+    go func() {
+        for {
+            c <- <-c1
+        }
+    }()
+    go func() {
+        for {
+            c <- <-c2
+        } 
+    }()
+    
+    return c
+}
+```
+
+方式2：使用goroutine-不定数量管道
+
+```go
+// 错误写法：闭包陷阱，for range中的ch只有一个，每次循环的值不同 //
+func fanIn(chs ...chan string) chan string {
+    c := make(chan string)
+    for _, ch := range chs {
+        go func() {
+            for {
+                c <- <-ch
+            }
+        }()
+    }
+}
+
+// 正确写法：通过函数传参，避免闭包陷阱
+func fanIn(chs ...chan string) chan string {
+    c := make(chan string)
+    for _, ch := range chs {
+        go func(in chan string) {
+            for {
+                c <- <-in
+            }
+        }(ch)
+    }
+}
+```
+
+方式3：select模式
+
+```go
+func fanInBySelect(c1, c2 chan string) chan string {
+    c := make(chan string)
+    
+    go func() {
+        for {
+            select {
+                case m := <-c1:
+                	c <- m
+                case m := <-c2:
+                	c <- m
+            }
+        }
+    }()
+    
+    return c
+}
+```
+
+### 非阻塞等待
+
+```go
+func nonBlockingWait(c chan string) (string, bool) {
+    select {
+        case m := <-c:
+        	return m, true
+    	default:
+        	return "", false
+    }
+}
+```
+
+### 超时机制
+
+```go
+func timeoutWait(c chan string, timeout time.Duration) (string, bool) {
+    select {
+    	case m:= <-c:
+        	return m, true
+        case <-time.After(timeout):
+        	return "", false
+    }
 }
 ```
 
