--- a/03-be/01-go-stack/01-golang/01-初识Go.md
+++ b/03-be/01-go-stack/01-golang/01-初识Go.md
@@ -5,7 +5,7 @@
 | 1972 | C语言                   |
 | 1983 | C++                     |
 | 1991 | Python                  |
-| 1995 | Java / JavaScript / Php |
+| 1995 | Java / JavaScript / PHP |
 | 2005 | AMD双核处理器出现       |
 | 2006 | Go                      |
 
@@ -13,26 +13,23 @@
 
 ## Go语言优势
 
-语法简单：开发效率高
-
-集成各种语言的优势：大量参考C与Python
-
-执行效率高：直接编译为二进制，部署非常简单
-
-并发编程高效：goroutine
-
-编译速度快：比 C++ / Java 要快
+| 优势               | 说明                               |
+| ------------------ | ---------------------------------- |
+| 语法简单           | 开发效率高                         |
+| 集成各种语言的优势 | 大量参考C与Python                  |
+| 执行效率高         | 直接编译为二进制，部署非常简单     |
+| 并发编程高效       | goroutine                          |
+| 编译速度快         | 比 C++ / Java 要快                 |
+| 工具链完善         | 内置测试，性能，文档，格式化等工具 |
 
 
 
 ## Go能做什么
 
-Web开发：gin、beego
-
-容器虚拟化：docker、k8s
-
-中间件：etcd、tidb、influxdb、nsq
-
-区块链：以太坊、fabric
-
-微服务：kit、go-micro
+| 领域       | 示例                      |
+| ---------- | ------------------------- |
+| Web开发    | gin、fiber、beego         |
+| 容器虚拟化 | docker、k8s               |
+| 中间件     | etcd、consul、nsq、tidb   |
+| 区块链     | 以太坊、fabric            |
+| 微服务     | go-zero、go-kit、go-micro |
